--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,10 +1,10 @@
 .profile {
     background-color: rgb(255, 255, 255);
     margin-top: 50px;
-    width: 250px;
     border-radius: 1rem;
     box-shadow: 1px 3px 3px rgba(0, 0, 0, 0.5);
     overflow: hidden;
+    max-width: 400px;
 }
 
 .description {
